[gd_scene load_steps=2 format=3 uid="uid://8kt0w1ipf8o8"]

[ext_resource type="Script" path="res://scripts/components/modal_dialog.gd" id="1_0a1b4"]

[node name="ModalDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0a1b4")
dialog_title = ""
dialog_content = ""
show_confirm_button = true
show_cancel_button = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="DialogPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
custom_minimum_size = Vector2(400, 300)

[node name="VBoxContainer" type="VBoxContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
text = "Dialog Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="DialogPanel/VBoxContainer"]
layout_mode = 2

[node name="ContentLabel" type="Label" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Dialog content goes here..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="DialogPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="DialogPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="DialogPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm" 